--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/media-quaries.css">
     <link rel="stylesheet" href="./css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <title>VINTAGE BAZAAAR</title>
@@ -58,13 +59,14 @@
                 <div class="eco-goal__block1">
                     <h1>#ECO GOAL</h1>
                     <p>
-                        <script>__("ECO_GOAL")</script>
+                        <script>__("MAIN_GOAL")</script>
                     </p>
                 </div>
 
                 <div class="eco-goal__block2">
+
                     <p>
-                        <script>__("MAIN_GOAL")</script>
+                        <script>__("ECO_GOAL")</script>
                     </p>
                     <img src="./imgs/32eco-goal.png" alt="lady">
                 </div>
@@ -108,7 +110,7 @@
                         <textarea name="" id="textarea" cols="80" rows="10" placeholder="ВАШЕ ПОВІДОМЛЕННЯ"></textarea>
                         <button type="submit">
                             <script>__("SUBMIT")</script></button>
-                        <footer>@ Made by LULU, 2019</footer>
+                        <footer>@ Made by LULU & Inna Horbenko, 2019</footer>
                     </form>
                 </div>
             </section>
