--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         </p>
                     </h3>
                     <form action="">
-                        <input type="text" placeholder="ВАШЕ ІМ’Я">
+                        <input type="text" id="name" placeholder="ВАШЕ ІМ’Я">
                         <input type="email" id="email" placeholder="email">
                         <textarea name="" id="textarea" cols="80" rows="10" placeholder="ВАШЕ ПОВІДОМЛЕННЯ"></textarea>
                         <button type="submit">
